add products from wp REST API

--- a/jacket.html
+++ b/jacket.html
@@ -46,7 +46,12 @@
 
 				<a href="cart.html" id="bag-icon"><i class="fas fa-shopping-bag"></i> <span id="items">0</span></a>
 			</header>
-			<main class="jacket-spec"></main>
+			<main class="jacket-spec">
+				<div>
+					<img class="jacket-image" src="" />
+				</div>
+				<div class="jacket-description"></div>
+			</main>
 			<footer>
 				<h1>RAINY DAYS</h1>
 				<ul>
